# internal/handler/handler.go
@@ -12,13 +12,13 @@ import (
 )
 
 var (
-	positionsRe      = regexp.MustCompile(`^\/positions\?limit=(\d+)&offset=(\d+)$`)
-	positionRe       = regexp.MustCompile(`^\/position\/(\d+)$`)
-	createPositionRe = regexp.MustCompile(`^\/position$`)
+	positionsRe      = regexp.MustCompile(`[\\/]positions\?limit=(\d+)&offset=(\d+)$`)
+	positionRe       = regexp.MustCompile(`[\\/]position[\\/](\s+)$`)
+	createPositionRe = regexp.MustCompile(`[\\/]position$`)
 
-	employeesRe      = regexp.MustCompile(`^\/employees\?limit=(\d+)&offset=(\d+)$`)
-	employeeRe       = regexp.MustCompile(`^\/employee\/(\d+)$`)
-	createEmployeeRe = regexp.MustCompile(`^\/employee$`)
+	employeesRe      = regexp.MustCompile(`[\\/]employees\?limit=(\d+)&offset=(\d+)$`)
+	employeeRe       = regexp.MustCompile(`[\\/]employee[\\/](\s+)$`)
+	createEmployeeRe = regexp.MustCompile(`[\\/]employee$`)
 )
 
 type Handler struct {
@@ -31,19 +31,18 @@ func NewHandler(ser *service.Service) *Handler {
 
 func (h *Handler) ServeHTTP(w http.ResponseWriter, r *http.Request) {
 	w.Header().Set("content-type", "application/json")
-	fmt.Println(r.URL.Path)
 	switch {
-	case r.Method == http.MethodGet && positionsRe.MatchString(r.URL.Path):
+	case r.Method == http.MethodGet && positionsRe.MatchString(r.URL.String()):
 		h.getPositions(w, r)
 		return
-	case r.Method == http.MethodGet && employeesRe.MatchString(r.URL.Path):
+	case r.Method == http.MethodGet && employeesRe.MatchString(r.URL.String()):
 		h.getEmployees(w, r)
 		return
 
-	case r.Method == http.MethodGet && positionRe.MatchString(r.URL.Path):
+	case r.Method == http.MethodGet && positionRe.MatchString(r.URL.String()):
 		h.getPosition(w, r)
 		return
-	case r.Method == http.MethodGet && employeeRe.MatchString(r.URL.Path):
+	case r.Method == http.MethodGet && employeeRe.MatchString(r.URL.String()):
 		h.getEmployee(w, r)
 		return
 
@@ -54,17 +53,17 @@ func (h *Handler) ServeHTTP(w http.ResponseWriter, r *http.Request) {
 		h.createEmployee(w, r)
 		return
 
-	case r.Method == http.MethodDelete && positionRe.MatchString(r.URL.Path):
+	case r.Method == http.MethodDelete && positionRe.MatchString(r.URL.String()):
 		h.deletePosition(w, r)
 		return
-	case r.Method == http.MethodDelete && employeeRe.MatchString(r.URL.Path):
+	case r.Method == http.MethodDelete && employeeRe.MatchString(r.URL.String()):
 		h.deleteEmployee(w, r)
 		return
 
-	case r.Method == http.MethodPut && createPositionRe.MatchString(r.URL.Path):
+	case r.Method == http.MethodPut && createPositionRe.MatchString(r.URL.String()):
 		h.updatePosition(w, r)
 		return
-	case r.Method == http.MethodPut && createEmployeeRe.MatchString(r.URL.Path):
+	case r.Method == http.MethodPut && createEmployeeRe.MatchString(r.URL.String()):
 		h.updateEmployee(w, r)
 		return
 	default:
@@ -76,6 +75,10 @@ func (h *Handler) ServeHTTP(w http.ResponseWriter, r *http.Request) {
 
 func (h *Handler) getPositions(w http.ResponseWriter, r *http.Request) {
 	query, err := url.ParseQuery(r.URL.RawQuery)
+	if err != nil{
+		http.Error(w, "error with server", http.StatusInternalServerError)
+		return
+	}
 	limit, err := strconv.ParseInt(query["limit"][0], 10, 64)
 	if err != nil {
 		http.Error(w, "error with server", http.StatusInternalServerError)
@@ -110,7 +113,12 @@ func (h *Handler) getPositions(w http.ResponseWriter, r *http.Request) {
 
 func (h *Handler) getEmployees(w http.ResponseWriter, r *http.Request) {
 	query, err := url.ParseQuery(r.URL.RawQuery)
+	if err != nil{
+		http.Error(w, "error with server", http.StatusInternalServerError)
+		return
+	}
 	limit, err := strconv.ParseInt(query["limit"][0], 10, 64)
+	fmt.Println(limit)
 	if err != nil {
 		http.Error(w, "error with server", http.StatusInternalServerError)
 		return
@@ -204,12 +212,14 @@ func (h *Handler) createPosition(w http.ResponseWriter, r *http.Request) {
 	}
 	if p.Salary == "" || p.Name == "" {
 		http.Error(w, "error with request", http.StatusBadRequest)
+		return
 	}
-	err := h.service.CreatePosition(p)
+	err := h.service.CreatePosition(&p)
 	if err != nil {
 		http.Error(w, err.Error(), http.StatusBadRequest)
+		return
 	}
-	jsonBytes, err := json.Marshal(p)
+	jsonBytes, err := json.Marshal(p.ID)
 	if err != nil {
 		http.Error(w, "error with server", http.StatusInternalServerError)
 		return
@@ -218,7 +228,7 @@ func (h *Handler) createPosition(w http.ResponseWriter, r *http.Request) {
 	if er != nil {
 		http.Error(w, "error: with server", http.StatusInternalServerError)
 	}
-	w.WriteHeader(http.StatusOK)
+	w.WriteHeader(http.StatusCreated)
 }
 
 func (h *Handler) createEmployee(w http.ResponseWriter, r *http.Request) {
@@ -229,12 +239,14 @@ func (h *Handler) createEmployee(w http.ResponseWriter, r *http.Request) {
 	}
 	if e.LasName == "" || e.FirstName == "" {
 		http.Error(w, "error with request", http.StatusBadRequest)
+		return
 	}
-	err := h.service.CreateEmployee(e)
+	err := h.service.CreateEmployee(&e)
 	if err != nil {
 		http.Error(w, err.Error(), http.StatusBadRequest)
+		return
 	}
-	jsonBytes, err := json.Marshal(e)
+	jsonBytes, err := json.Marshal(e.ID)
 	if err != nil {
 		http.Error(w, "error with server", http.StatusInternalServerError)
 		return
@@ -243,7 +255,7 @@ func (h *Handler) createEmployee(w http.ResponseWriter, r *http.Request) {
 	if er != nil {
 		http.Error(w, "error: with server", http.StatusInternalServerError)
 	}
-	w.WriteHeader(http.StatusOK)
+	w.WriteHeader(http.StatusCreated)
 }
 
 func (h *Handler) updatePosition(w http.ResponseWriter, r *http.Request) {
@@ -296,9 +308,9 @@ func (h *Handler) deletePosition(w http.ResponseWriter, r *http.Request) {
 	deleteID := positionRe.FindStringSubmatch(r.URL.Path)[1]
 	err := h.service.DeletePosition(deleteID)
 	if err != nil {
-		http.Error(w, "error: no content", http.StatusNoContent)
+		http.Error(w, "error: no content", http.StatusNotFound)
 	}
-	jsonBytes, err := json.Marshal(deleteID)
+	jsonBytes, err := json.Marshal(internal.Position{})
 	if err != nil {
 		http.Error(w, "error with server", http.StatusInternalServerError)
 		return
@@ -307,16 +319,16 @@ func (h *Handler) deletePosition(w http.ResponseWriter, r *http.Request) {
 	if er != nil {
 		http.Error(w, "error: with server", http.StatusInternalServerError)
 	}
-	w.WriteHeader(http.StatusOK)
+	w.WriteHeader(http.StatusNoContent)
 }
 
 func (h *Handler) deleteEmployee(w http.ResponseWriter, r *http.Request) {
 	deleteID := employeeRe.FindStringSubmatch(r.URL.Path)[1]
 	err := h.service.DeleteEmployee(deleteID)
 	if err != nil {
-		http.Error(w, "error: no content", http.StatusNoContent)
+		http.Error(w, "error: no content", http.StatusNotFound)
 	}
-	jsonBytes, err := json.Marshal(deleteID)
+	jsonBytes, err := json.Marshal(internal.Employee{})
 	if err != nil {
 		http.Error(w, "error with server", http.StatusInternalServerError)
 		return
@@ -325,5 +337,5 @@ func (h *Handler) deleteEmployee(w http.ResponseWriter, r *http.Request) {
 	if er != nil {
 		http.Error(w, "error: with server", http.StatusInternalServerError)
 	}
-	w.WriteHeader(http.StatusOK)
+	w.WriteHeader(http.StatusNoContent)
 }
